# DrivePI

./: README.md  evaluate_plan.py  pyproject.toml  requirements.txt  run_test_occ_llm_4_gpus_26_2_11_occ_action.sh  run_test_occ_llm_4_gpus_26_2_11_text.sh  run_test_occ_llm_4_gpus_occ_action.sh  run_test_occ_llm_4_gpus_text.sh  run_train_occ_action_llm_8_gpus_final.sh
configs/_base_/datasets/: bev_feature_qa_pretrain_0722_0815_occ_fullv3vol_det_qa_action.py  bev_feature_qa_pretrain_0722_three.py
configs/_base_/models/: deepseekv2_tiny_qwen2vit.py  llama3_1_clip.py  llama3_1_empty_vision.py  llama3_1_internvit300m_selfMining_anyres.py  llama3_1_internvit_anyres.py  llama3_1_qwen2vit_nativeAnyres.py  llama3_1_siglip_anyres.py  llama3_1_unit1B_anyres.py  qwen2_5_empty_vision.py  qwen2_5_qwen2vit.py  vicuna_clip.py
configs/_base_/training/: default.py
configs/example/drivepi/: drivepi_05b_1e_4.py  pretrain_sms_0722_three_rh_05b.py
docs/: BEV_Feature_Training.md  Projector_Testing_Guide.md
emova/: conversation.py  mm_utils.py  registry_utils.py  utils.py
emova/data/: dataset.py  feature_dataset.py  preprocess.py
emova/eval/: eval_end2end.py  eval_tts.py  eval_wer_cer.py  extract_speech_json.py  extract_tts.py  gpt_eval_speech.py  gpt_eval_speech_cls.py  gpt_eval_speech_no_punc.py  model_speech_asr_tts.py  model_speech_sft.py  model_speech_sft_img.py  readme.md
emova/eval/whisper_asr/: paraformer_zh_asr.py  whisper_asr.py
emova/model/: __init__.py  action_diffusion_head.py  emova_arch.py  fusion_modules.py  occ_head.py  run_example_train.py  transformer_decoder.py  utils.py
emova/model/language_model/: __init__.py  emova_glm4.py  emova_llama.py  emova_mistral.py  emova_mpt.py  emova_phi3.py  emova_qwen2.py
emova/model/multimodal_encoder/: __init__.py  clip_encoder.py  empty_encoder.py  intern_encoder.py  qwen2_encoder.py  siglip_encoder.py  unit_encoder.py
emova/model/multimodal_projector/: __init__.py  self_mining_resampler.py
emova/serve/: controller.py  gradio_web_server.py  model_worker.py
emova/train/: emova_trainer.py  logger.py  train.py
occ_evaluation/: ego_pose_dataset.py  eval.py  miou_metrics.py  ray_metrics.py  ray_pq.py
scripts/: convert_hf_parquet_to_llava_format.py  emova_batch_inference_occ_with_action.py  eval_nuscenes_qa.py  eval_occ.py  eval_qa.py  example_projector_test.py  insert_speech_token.py  prepare_bev_qa_data.py  start_training.sh  test_bev_system.py  test_projector_modifications.py  train_bev_direct.py  visualize_camera_caption.py  visualize_camera_caption_rui.py  zero2.json  zero3.json
(+69 files in other folders)
